# 2D-Haptics-Library

./: README.md  sdk-3.17.6
data/: dataread_csv.m  (+5 more)
include/: 2D_circle_haptics.cc_bak  2D_edge_haptics.cc  CMakeLists.txt  HapticScene.h  MiscFunctions.h  error.txt
include/.ccls-cache/@@home@kalu@Documents@Files@Engineering@Research@SBRM@Sigma_Codebase@include/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@12@algorithm.blob  @usr@include@c++@12@array.blob  @usr@include@c++@12@atomic.blob  @usr@include@c++@12@backward@binders.h.blob  @usr@include@c++@12@bits@algorithmfwd.h.blob  @usr@include@c++@12@bits@alloc_traits.h.blob  @usr@include@c++@12@bits@allocator.h.blob  @usr@include@c++@12@bits@atomic_base.h.blob  @usr@include@c++@12@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@12@bits@basic_ios.h.blob  @usr@include@c++@12@bits@basic_ios.tcc.blob  @usr@include@c++@12@bits@basic_string.h.blob  @usr@include@c++@12@bits@basic_string.tcc.blob  @usr@include@c++@12@bits@char_traits.h.blob  @usr@include@c++@12@bits@charconv.h.blob  @usr@include@c++@12@bits@chrono.h.blob  @usr@include@c++@12@bits@codecvt.h.blob  @usr@include@c++@12@bits@concept_check.h.blob  @usr@include@c++@12@bits@cpp_type_traits.h.blob  @usr@include@c++@12@bits@cxxabi_forced.h.blob  @usr@include@c++@12@bits@cxxabi_init_exception.h.blob  @usr@include@c++@12@bits@exception.h.blob  @usr@include@c++@12@bits@exception_defines.h.blob  @usr@include@c++@12@bits@exception_ptr.h.blob  (+453 more)
include/MATLAB/: InCircle.m  InCircle_main.m  MPLS_Struct.asv  MPLS_Struct.m  MPLS_main.asv  MPLS_main.m  Virtual_Curve_Force_Gen.m  arcplan.m  mouse_pointer.asv  mouse_pointer.m
include/Old_Code/: 2D_circle_haptics.cc.bak  2D_edge_haptics.cc.bak  HapticScene.h.bak  main.cc  main.cc.bak  math_utils.h  mesh.h  mpf_meshcloud.cc  mpf_meshcloud.h  mpf_utils.h
(+142 files in other folders)
